Fix player control and view overflowing on abnormal window size

--- a/src/vidio.immersive.css
+++ b/src/vidio.immersive.css
@@ -22,6 +22,11 @@
   transform: translateY(-50%);
 }
 
+.immersive-mode .video-js {
+  padding-top: 0!important;
+  height: 100vh!important;
+}
+
 .livestreaming-player {
   background-image: none!important;
 }
